--- a/content/posts/Portfolio/20150209 Bloosm.md
+++ b/content/posts/Portfolio/20150209 Bloosm.md
@@ -1,11 +1,11 @@
 ---
 title: "The Portrait Series: Blossom"
-slug: "The Portrait Series 01"
+slug: "portrait blossom"
 date: 2015-02-09T08:07:00+08:00
 draft: false
 license: "Copyright © 2015 Aozaki, All rights reserved."
 toc: false
-description: "01: Blossom in Snow"
+comment: false
 categories: ["Portfolio"]
 tags: 
 - 摄影
