--- a/content/posts/Portfolio/20150726 Refusal.md
+++ b/content/posts/Portfolio/20150726 Refusal.md
@@ -22,3 +22,9 @@ tags:
     <img src="https://img.aozaki-kuro.com/20150726_0007.jpg">
     <img src="https://img.aozaki-kuro.com/20150726_0008.jpg">
 </center>
+
+<!--
+    Nikon D800
+    Nikon AF-S NIKKOR 28mm f/1.8G
+    Nikon AF-S NIKKOR 85mm f/1.8G
+-->
