--- a/content/posts/Portfolio/20170720 Wander.md
+++ b/content/posts/Portfolio/20170720 Wander.md
@@ -30,3 +30,8 @@ tags:
     <img src="https://img.aozaki-kuro.com/20170720_0014.jpg">
     <img src="https://img.aozaki-kuro.com/20170720_0015.jpg">
 </center>
+
+<!--
+    Sony Cyber-shot RX1R II
+    Zeiss 35mm f/2.0
+-->
