--- a/content/posts/Portfolio/20190214 Dreamer.md
+++ b/content/posts/Portfolio/20190214 Dreamer.md
@@ -21,3 +21,8 @@ tags:
     <img src="https://img.aozaki-kuro.com/20190214_0005.jpg">
     <img src="https://img.aozaki-kuro.com/20190214_0006.jpg">
 </center>
+
+<!--
+    Sony a7R III
+    Sony Planar T* FE 50mm f/1.4 ZA
+-->
