--- a/content/posts/Portfolio/20150209 Bloosm.md
+++ b/content/posts/Portfolio/20150209 Bloosm.md
@@ -24,3 +24,9 @@ tags:
     <img src="https://img.aozaki-kuro.com/20150209_0008.jpg">
     <img src="https://img.aozaki-kuro.com/20150209_0009.jpg">
 </center>
+
+<!--
+    Nikon D800
+    Nikon AF-S NIKKOR 28mm f/1.8G
+    Nikon AF-S NIKKOR 85mm f/1.8G
+-->
