--- a/content/posts/Portfolio/20160505 Origami.md
+++ b/content/posts/Portfolio/20160505 Origami.md
@@ -12,8 +12,19 @@ tags:
 - 人像
 ---
 
+{{< image src="https://img.aozaki-kuro.com/20160505_0001.jpg" >}}
+{{< image src="https://img.aozaki-kuro.com/20160505_0001.jpg" >}}
+
+<!--
 <br>
 <center>
     <img src="https://img.aozaki-kuro.com/20160505_0001.jpg">
     <img src="https://img.aozaki-kuro.com/20160505_0002.jpg">
 </center>
+-->
+
+<!--
+    Hasselblad 203FE
+    Hasselblad F 110m f/2.0 Planar
+    Fujifilm Pro 400H
+-->
