--- a/content/posts/Portfolio/20150329 Regret.md
+++ b/content/posts/Portfolio/20150329 Regret.md
@@ -13,18 +13,17 @@ tags:
 ---
 
 <br>
-<center>
-    <img src="https://img.aozaki-kuro.com/20150329_0001.jpg">
-    <img src="https://img.aozaki-kuro.com/20150329_0002.jpg">
-    <img src="https://img.aozaki-kuro.com/20150329_0003.jpg">
-    <img src="https://img.aozaki-kuro.com/20150329_0004.jpg">
-    <img src="https://img.aozaki-kuro.com/20150329_0005.jpg">
-    <img src="https://img.aozaki-kuro.com/20150329_0006.jpg">
-    <img src="https://img.aozaki-kuro.com/20150329_0007.jpg">
-    <img src="https://img.aozaki-kuro.com/20150329_0008.jpg">
-    <img src="https://img.aozaki-kuro.com/20150329_0009.jpg">
-    <img src="https://img.aozaki-kuro.com/20150329_0010.jpg">
-</center>
+
+{{< image src="https://img.aozaki-kuro.com/20150329_0001.jpg" caption="1" >}}
+{{< image src="https://img.aozaki-kuro.com/20150329_0002.jpg" caption="2" >}}
+{{< image src="https://img.aozaki-kuro.com/20150329_0003.jpg" caption="3" >}}
+{{< image src="https://img.aozaki-kuro.com/20150329_0004.jpg" caption="4" >}}
+{{< image src="https://img.aozaki-kuro.com/20150329_0005.jpg" caption="5" >}}
+{{< image src="https://img.aozaki-kuro.com/20150329_0006.jpg" caption="6" >}}
+{{< image src="https://img.aozaki-kuro.com/20150329_0007.jpg" caption="7" >}}
+{{< image src="https://img.aozaki-kuro.com/20150329_0008.jpg" caption="8" >}}
+{{< image src="https://img.aozaki-kuro.com/20150329_0009.jpg" caption="9" >}}
+{{< image src="https://img.aozaki-kuro.com/20150329_0010.jpg" caption="10" >}}
 
 <!--
     Nikon D800
