--- a/content/posts/Portfolio/20150809 Funernal.md
+++ b/content/posts/Portfolio/20150809 Funernal.md
@@ -13,15 +13,14 @@ tags:
 ---
 
 <br>
-<center>
-    <img src="https://img.aozaki-kuro.com/20150809_0001.jpg">
-    <img src="https://img.aozaki-kuro.com/20150809_0002.jpg">
-    <img src="https://img.aozaki-kuro.com/20150809_0003.jpg">
-    <img src="https://img.aozaki-kuro.com/20150809_0004.jpg">
-    <img src="https://img.aozaki-kuro.com/20150809_0005.jpg">
-    <img src="https://img.aozaki-kuro.com/20150809_0006.jpg">
-    <img src="https://img.aozaki-kuro.com/20150809_0008.jpg">
-</center>
+
+{{< image src="https://img.aozaki-kuro.com/20150809_0001.jpg" caption="1" >}}
+{{< image src="https://img.aozaki-kuro.com/20150809_0002.jpg" caption="2" >}}
+{{< image src="https://img.aozaki-kuro.com/20150809_0003.jpg" caption="3" >}}
+{{< image src="https://img.aozaki-kuro.com/20150809_0004.jpg" caption="4" >}}
+{{< image src="https://img.aozaki-kuro.com/20150809_0005.jpg" caption="5" >}}
+{{< image src="https://img.aozaki-kuro.com/20150809_0006.jpg" caption="6" >}}
+{{< image src="https://img.aozaki-kuro.com/20150809_0008.jpg" caption="7" >}}
 
 <!--
     Nikon D800
