--- a/content/posts/Portfolio/20160505 Origami.md
+++ b/content/posts/Portfolio/20160505 Origami.md
@@ -12,16 +12,14 @@ tags:
 - 人像
 ---
 
-{{< image src="https://img.aozaki-kuro.com/20160505_0001.jpg" >}}
-{{< image src="https://img.aozaki-kuro.com/20160505_0001.jpg" >}}
-
 <!--
-<br>
-<center>
-    <img src="https://img.aozaki-kuro.com/20160505_0001.jpg">
-    <img src="https://img.aozaki-kuro.com/20160505_0002.jpg">
-</center>
+{{< image src=".jpg" caption="" >}}
 -->
+
+<br>
+
+{{< image src="https://img.aozaki-kuro.com/20160505_0001.jpg" caption="1" >}}
+{{< image src="https://img.aozaki-kuro.com/20160505_0002.jpg" caption="2" >}}
 
 <!--
     Hasselblad 203FE
