--- a/content/posts/Portfolio/20190214 Dreamer.md
+++ b/content/posts/Portfolio/20190214 Dreamer.md
@@ -13,14 +13,13 @@ tags:
 ---
 
 <br>
-<center>
-    <img src="https://img.aozaki-kuro.com/20190214_0001.jpg">
-    <img src="https://img.aozaki-kuro.com/20190214_0002.jpg">
-    <img src="https://img.aozaki-kuro.com/20190214_0003.jpg">
-    <img src="https://img.aozaki-kuro.com/20190214_0004.jpg">
-    <img src="https://img.aozaki-kuro.com/20190214_0005.jpg">
-    <img src="https://img.aozaki-kuro.com/20190214_0006.jpg">
-</center>
+
+{{< image src="https://img.aozaki-kuro.com/20190214_0001.jpg" caption="1" >}}
+{{< image src="https://img.aozaki-kuro.com/20190214_0002.jpg" caption="2" >}}
+{{< image src="https://img.aozaki-kuro.com/20190214_0003.jpg" caption="3" >}}
+{{< image src="https://img.aozaki-kuro.com/20190214_0004.jpg" caption="4" >}}
+{{< image src="https://img.aozaki-kuro.com/20190214_0005.jpg" caption="5" >}}
+{{< image src="https://img.aozaki-kuro.com/20190214_0006.jpg" caption="6" >}}
 
 <!--
     Sony a7R III
