Rollback to simple HTML code

--- a/content/posts/Portfolio/20150726 Refusal.md
+++ b/content/posts/Portfolio/20150726 Refusal.md
@@ -13,14 +13,15 @@ tags:
 ---
 
 <br>
-
-{{< image src="https://img.aozaki-kuro.com/20150726_0001.jpg" caption="1" >}}
-{{< image src="https://img.aozaki-kuro.com/20150726_0002.jpg" caption="2" >}}
-{{< image src="https://img.aozaki-kuro.com/20150726_0003.jpg" caption="3" >}}
-{{< image src="https://img.aozaki-kuro.com/20150726_0004.jpg" caption="4" >}}
-{{< image src="https://img.aozaki-kuro.com/20150726_0006.jpg" caption="5" >}}
-{{< image src="https://img.aozaki-kuro.com/20150726_0007.jpg" caption="6" >}}
-{{< image src="https://img.aozaki-kuro.com/20150726_0008.jpg" caption="7" >}}
+<center>
+    <img src="https://img.aozaki-kuro.com/20150726_0001.jpg">
+    <img src="https://img.aozaki-kuro.com/20150726_0002.jpg">
+    <img src="https://img.aozaki-kuro.com/20150726_0003.jpg">
+    <img src="https://img.aozaki-kuro.com/20150726_0004.jpg">
+    <img src="https://img.aozaki-kuro.com/20150726_0006.jpg">
+    <img src="https://img.aozaki-kuro.com/20150726_0007.jpg">
+    <img src="https://img.aozaki-kuro.com/20150726_0008.jpg">
+</center>
 
 <!--
     Nikon D800
