--- a/content/posts/Portfolio/20170720 Wander.md
+++ b/content/posts/Portfolio/20170720 Wander.md
@@ -13,22 +13,23 @@ tags:
 ---
 
 <br>
-
-{{< image src="https://img.aozaki-kuro.com/20170720_0001.jpg" caption="1" >}}
-{{< image src="https://img.aozaki-kuro.com/20170720_0002.jpg" caption="2" >}}
-{{< image src="https://img.aozaki-kuro.com/20170720_0003.jpg" caption="3" >}}
-{{< image src="https://img.aozaki-kuro.com/20170720_0004.jpg" caption="4" >}}
-{{< image src="https://img.aozaki-kuro.com/20170720_0005.jpg" caption="5" >}}
-{{< image src="https://img.aozaki-kuro.com/20170720_0006.jpg" caption="6" >}}
-{{< image src="https://img.aozaki-kuro.com/20170720_0007.jpg" caption="7" >}}
-{{< image src="https://img.aozaki-kuro.com/20170720_0008.jpg" caption="8" >}}
-{{< image src="https://img.aozaki-kuro.com/20170720_0009.jpg" caption="9" >}}
-{{< image src="https://img.aozaki-kuro.com/20170720_0010.jpg" caption="10" >}}
-{{< image src="https://img.aozaki-kuro.com/20170720_0011.jpg" caption="11" >}}
-{{< image src="https://img.aozaki-kuro.com/20170720_0012.jpg" caption="12" >}}
-{{< image src="https://img.aozaki-kuro.com/20170720_0013.jpg" caption="13" >}}
-{{< image src="https://img.aozaki-kuro.com/20170720_0014.jpg" caption="14" >}}
-{{< image src="https://img.aozaki-kuro.com/20170720_0015.jpg" caption="15" >}}
+<center>
+    <img src="https://img.aozaki-kuro.com/20170720_0001.jpg">
+    <img src="https://img.aozaki-kuro.com/20170720_0002.jpg">
+    <img src="https://img.aozaki-kuro.com/20170720_0003.jpg">
+    <img src="https://img.aozaki-kuro.com/20170720_0004.jpg">
+    <img src="https://img.aozaki-kuro.com/20170720_0005.jpg">
+    <img src="https://img.aozaki-kuro.com/20170720_0006.jpg">
+    <img src="https://img.aozaki-kuro.com/20170720_0007.jpg">
+    <img src="https://img.aozaki-kuro.com/20170720_0008.jpg">
+    <img src="https://img.aozaki-kuro.com/20170720_0009.jpg">
+    <img src="https://img.aozaki-kuro.com/20170720_0010.jpg">
+    <img src="https://img.aozaki-kuro.com/20170720_0011.jpg">
+    <img src="https://img.aozaki-kuro.com/20170720_0012.jpg">
+    <img src="https://img.aozaki-kuro.com/20170720_0013.jpg">
+    <img src="https://img.aozaki-kuro.com/20170720_0014.jpg">
+    <img src="https://img.aozaki-kuro.com/20170720_0015.jpg">
+</center>
 
 <!--
     Sony Cyber-shot RX1R II
