--- a/content/posts/Portfolio/20140327 Memorial.md
+++ b/content/posts/Portfolio/20140327 Memorial.md
@@ -13,14 +13,15 @@ tags:
 ---
 
 <br>
-
-{{< image src="https://img.aozaki-kuro.com/20140327_0001.jpg" caption="1" >}}
-{{< image src="https://img.aozaki-kuro.com/20140327_0002.jpg" caption="2" >}}
-{{< image src="https://img.aozaki-kuro.com/20140327_0003.jpg" caption="3" >}}
-{{< image src="https://img.aozaki-kuro.com/20140327_0004.jpg" caption="4" >}}
-{{< image src="https://img.aozaki-kuro.com/20140327_0005.jpg" caption="5" >}}
-{{< image src="https://img.aozaki-kuro.com/20140327_0006.jpg" caption="6" >}}
-{{< image src="https://img.aozaki-kuro.com/20140327_0007.jpg" caption="7" >}}
+<center>
+    <img src="https://img.aozaki-kuro.com/20140327_0001.jpg">
+    <img src="https://img.aozaki-kuro.com/20140327_0002.jpg">
+    <img src="https://img.aozaki-kuro.com/20140327_0003.jpg">
+    <img src="https://img.aozaki-kuro.com/20140327_0004.jpg">
+    <img src="https://img.aozaki-kuro.com/20140327_0005.jpg">
+    <img src="https://img.aozaki-kuro.com/20140327_0006.jpg">
+    <img src="https://img.aozaki-kuro.com/20140327_0007.jpg">
+</center>
 
 <!--
     Nikon D800
