--- a/content/posts/Portfolio/20150209 Bloosm.md
+++ b/content/posts/Portfolio/20150209 Bloosm.md
@@ -13,16 +13,17 @@ tags:
 ---
 
 <br>
-
-{{< image src="https://img.aozaki-kuro.com/20150209_0001.jpg" caption="1" >}}
-{{< image src="https://img.aozaki-kuro.com/20150209_0002.jpg" caption="2" >}}
-{{< image src="https://img.aozaki-kuro.com/20150209_0003.jpg" caption="3" >}}
-{{< image src="https://img.aozaki-kuro.com/20150209_0004.jpg" caption="4" >}}
-{{< image src="https://img.aozaki-kuro.com/20150209_0005.jpg" caption="5" >}}
-{{< image src="https://img.aozaki-kuro.com/20150209_0006.jpg" caption="6" >}}
-{{< image src="https://img.aozaki-kuro.com/20150209_0007.jpg" caption="7" >}}
-{{< image src="https://img.aozaki-kuro.com/20150209_0008.jpg" caption="8" >}}
-{{< image src="https://img.aozaki-kuro.com/20150209_0009.jpg" caption="9" >}}
+<center>
+    <img src="https://img.aozaki-kuro.com/20150209_0001.jpg">
+    <img src="https://img.aozaki-kuro.com/20150209_0002.jpg">
+    <img src="https://img.aozaki-kuro.com/20150209_0003.jpg">
+    <img src="https://img.aozaki-kuro.com/20150209_0004.jpg">
+    <img src="https://img.aozaki-kuro.com/20150209_0005.jpg">
+    <img src="https://img.aozaki-kuro.com/20150209_0006.jpg">
+    <img src="https://img.aozaki-kuro.com/20150209_0007.jpg">
+    <img src="https://img.aozaki-kuro.com/20150209_0008.jpg">
+    <img src="https://img.aozaki-kuro.com/20150209_0009.jpg">
+</center>
 
 <!--
     Nikon D800
