--- a/content/posts/Portfolio - Photo/20140327 Memorial.md
+++ b/content/posts/Portfolio - Photo/20140327 Memorial.md
@@ -14,13 +14,13 @@ tags:
 
 <br>
 <center>
-    <img src="https://img.aozaki-kuro.com/20140327_0001.jpg">
-    <img src="https://img.aozaki-kuro.com/20140327_0002.jpg">
-    <img src="https://img.aozaki-kuro.com/20140327_0003.jpg">
-    <img src="https://img.aozaki-kuro.com/20140327_0004.jpg">
-    <img src="https://img.aozaki-kuro.com/20140327_0005.jpg">
-    <img src="https://img.aozaki-kuro.com/20140327_0006.jpg">
-    <img src="https://img.aozaki-kuro.com/20140327_0007.jpg">
+    <img src="https://img.aozaki.cc/20140327_0001.jpg">
+    <img src="https://img.aozaki.cc/20140327_0002.jpg">
+    <img src="https://img.aozaki.cc/20140327_0003.jpg">
+    <img src="https://img.aozaki.cc/20140327_0004.jpg">
+    <img src="https://img.aozaki.cc/20140327_0005.jpg">
+    <img src="https://img.aozaki.cc/20140327_0006.jpg">
+    <img src="https://img.aozaki.cc/20140327_0007.jpg">
 </center>
 
 <!--
