--- a/content/posts/Portfolio - Photo/20150726 Refusal.md
+++ b/content/posts/Portfolio - Photo/20150726 Refusal.md
@@ -14,13 +14,13 @@ tags:
 
 <br>
 <center>
-    <img src="https://img.aozaki-kuro.com/20150726_0001.jpg">
-    <img src="https://img.aozaki-kuro.com/20150726_0002.jpg">
-    <img src="https://img.aozaki-kuro.com/20150726_0003.jpg">
-    <img src="https://img.aozaki-kuro.com/20150726_0004.jpg">
-    <img src="https://img.aozaki-kuro.com/20150726_0006.jpg">
-    <img src="https://img.aozaki-kuro.com/20150726_0007.jpg">
-    <img src="https://img.aozaki-kuro.com/20150726_0008.jpg">
+    <img src="https://img.aozaki.cc/20150726_0001.jpg">
+    <img src="https://img.aozaki.cc/20150726_0002.jpg">
+    <img src="https://img.aozaki.cc/20150726_0003.jpg">
+    <img src="https://img.aozaki.cc/20150726_0004.jpg">
+    <img src="https://img.aozaki.cc/20150726_0006.jpg">
+    <img src="https://img.aozaki.cc/20150726_0007.jpg">
+    <img src="https://img.aozaki.cc/20150726_0008.jpg">
 </center>
 
 <!--
