--- a/content/posts/Portfolio - Photo/20170720 Wander.md
+++ b/content/posts/Portfolio - Photo/20170720 Wander.md
@@ -14,21 +14,21 @@ tags:
 
 <br>
 <center>
-    <img src="https://img.aozaki-kuro.com/20170720_0001.jpg">
-    <img src="https://img.aozaki-kuro.com/20170720_0002.jpg">
-    <img src="https://img.aozaki-kuro.com/20170720_0003.jpg">
-    <img src="https://img.aozaki-kuro.com/20170720_0004.jpg">
-    <img src="https://img.aozaki-kuro.com/20170720_0005.jpg">
-    <img src="https://img.aozaki-kuro.com/20170720_0006.jpg">
-    <img src="https://img.aozaki-kuro.com/20170720_0007.jpg">
-    <img src="https://img.aozaki-kuro.com/20170720_0008.jpg">
-    <img src="https://img.aozaki-kuro.com/20170720_0009.jpg">
-    <img src="https://img.aozaki-kuro.com/20170720_0010.jpg">
-    <img src="https://img.aozaki-kuro.com/20170720_0011.jpg">
-    <img src="https://img.aozaki-kuro.com/20170720_0012.jpg">
-    <img src="https://img.aozaki-kuro.com/20170720_0013.jpg">
-    <img src="https://img.aozaki-kuro.com/20170720_0014.jpg">
-    <img src="https://img.aozaki-kuro.com/20170720_0015.jpg">
+    <img src="https://img.aozaki.cc/20170720_0001.jpg">
+    <img src="https://img.aozaki.cc/20170720_0002.jpg">
+    <img src="https://img.aozaki.cc/20170720_0003.jpg">
+    <img src="https://img.aozaki.cc/20170720_0004.jpg">
+    <img src="https://img.aozaki.cc/20170720_0005.jpg">
+    <img src="https://img.aozaki.cc/20170720_0006.jpg">
+    <img src="https://img.aozaki.cc/20170720_0007.jpg">
+    <img src="https://img.aozaki.cc/20170720_0008.jpg">
+    <img src="https://img.aozaki.cc/20170720_0009.jpg">
+    <img src="https://img.aozaki.cc/20170720_0010.jpg">
+    <img src="https://img.aozaki.cc/20170720_0011.jpg">
+    <img src="https://img.aozaki.cc/20170720_0012.jpg">
+    <img src="https://img.aozaki.cc/20170720_0013.jpg">
+    <img src="https://img.aozaki.cc/20170720_0014.jpg">
+    <img src="https://img.aozaki.cc/20170720_0015.jpg">
 </center>
 
 <!--
