--- a/content/posts/Portfolio - Photo/20190214 Dreamer.md
+++ b/content/posts/Portfolio - Photo/20190214 Dreamer.md
@@ -14,12 +14,12 @@ tags:
 
 <br>
 <center>
-    <img src="https://img.aozaki-kuro.com/20190214_0001.jpg">
-    <img src="https://img.aozaki-kuro.com/20190214_0002.jpg">
-    <img src="https://img.aozaki-kuro.com/20190214_0003.jpg">
-    <img src="https://img.aozaki-kuro.com/20190214_0004.jpg">
-    <img src="https://img.aozaki-kuro.com/20190214_0005.jpg">
-    <img src="https://img.aozaki-kuro.com/20190214_0006.jpg">
+    <img src="https://img.aozaki.cc/20190214_0001.jpg">
+    <img src="https://img.aozaki.cc/20190214_0002.jpg">
+    <img src="https://img.aozaki.cc/20190214_0003.jpg">
+    <img src="https://img.aozaki.cc/20190214_0004.jpg">
+    <img src="https://img.aozaki.cc/20190214_0005.jpg">
+    <img src="https://img.aozaki.cc/20190214_0006.jpg">
 </center>
 
 <!--
