--- a/content/posts/Portfolio - Photo/20150209 Bloosm.md
+++ b/content/posts/Portfolio - Photo/20150209 Bloosm.md
@@ -14,15 +14,15 @@ tags:
 
 <br>
 <center>
-    <img src="https://img.aozaki-kuro.com/20150209_0001.jpg">
-    <img src="https://img.aozaki-kuro.com/20150209_0002.jpg">
-    <img src="https://img.aozaki-kuro.com/20150209_0003.jpg">
-    <img src="https://img.aozaki-kuro.com/20150209_0004.jpg">
-    <img src="https://img.aozaki-kuro.com/20150209_0005.jpg">
-    <img src="https://img.aozaki-kuro.com/20150209_0006.jpg">
-    <img src="https://img.aozaki-kuro.com/20150209_0007.jpg">
-    <img src="https://img.aozaki-kuro.com/20150209_0008.jpg">
-    <img src="https://img.aozaki-kuro.com/20150209_0009.jpg">
+    <img src="https://img.aozaki.cc/20150209_0001.jpg">
+    <img src="https://img.aozaki.cc/20150209_0002.jpg">
+    <img src="https://img.aozaki.cc/20150209_0003.jpg">
+    <img src="https://img.aozaki.cc/20150209_0004.jpg">
+    <img src="https://img.aozaki.cc/20150209_0005.jpg">
+    <img src="https://img.aozaki.cc/20150209_0006.jpg">
+    <img src="https://img.aozaki.cc/20150209_0007.jpg">
+    <img src="https://img.aozaki.cc/20150209_0008.jpg">
+    <img src="https://img.aozaki.cc/20150209_0009.jpg">
 </center>
 
 <!--
