--- a/content/posts/Portfolio - Photo/20150809 Funernal.md
+++ b/content/posts/Portfolio - Photo/20150809 Funernal.md
@@ -14,13 +14,13 @@ tags:
 
 <br>
 <center>
-    <img src="https://img.aozaki-kuro.com/20150809_0001.jpg">
-    <img src="https://img.aozaki-kuro.com/20150809_0002.jpg">
-    <img src="https://img.aozaki-kuro.com/20150809_0003.jpg">
-    <img src="https://img.aozaki-kuro.com/20150809_0004.jpg">
-    <img src="https://img.aozaki-kuro.com/20150809_0005.jpg">
-    <img src="https://img.aozaki-kuro.com/20150809_0006.jpg">
-    <img src="https://img.aozaki-kuro.com/20150809_0008.jpg">
+    <img src="https://img.aozaki.cc/20150809_0001.jpg">
+    <img src="https://img.aozaki.cc/20150809_0002.jpg">
+    <img src="https://img.aozaki.cc/20150809_0003.jpg">
+    <img src="https://img.aozaki.cc/20150809_0004.jpg">
+    <img src="https://img.aozaki.cc/20150809_0005.jpg">
+    <img src="https://img.aozaki.cc/20150809_0006.jpg">
+    <img src="https://img.aozaki.cc/20150809_0008.jpg">
 </center>
 
 <!--
