--- a/content/posts/Portfolio - Photo/20160505 Origami.md
+++ b/content/posts/Portfolio - Photo/20160505 Origami.md
@@ -12,14 +12,14 @@ tags:
 - 人像
 ---
 
-{{< image src="https://img.aozaki-kuro.com/20160505_0001.jpg" >}}
-{{< image src="https://img.aozaki-kuro.com/20160505_0001.jpg" >}}
+{{< image src="https://img.aozaki.cc/20160505_0001.jpg" >}}
+{{< image src="https://img.aozaki.cc/20160505_0001.jpg" >}}
 
 <!--
 <br>
 <center>
-    <img src="https://img.aozaki-kuro.com/20160505_0001.jpg">
-    <img src="https://img.aozaki-kuro.com/20160505_0002.jpg">
+    <img src="https://img.aozaki.cc/20160505_0001.jpg">
+    <img src="https://img.aozaki.cc/20160505_0002.jpg">
 </center>
 -->
 
